@@ -23,6 +23,7 @@ import java.io.DataOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
+import java.io.UnsupportedEncodingException;
 import java.net.HttpURLConnection;
 import java.net.MalformedURLException;
 import java.net.ProtocolException;
@@ -35,11 +36,11 @@ import java.util.Set;
 
 import org.apache.http.HttpResponse;
 import org.apache.http.NameValuePair;
-import org.apache.http.client.ClientProtocolException;
 import org.apache.http.client.HttpClient;
 import org.apache.http.client.entity.UrlEncodedFormEntity;
 import org.apache.http.client.methods.HttpGet;
 import org.apache.http.client.methods.HttpPost;
+import org.apache.http.client.methods.HttpUriRequest;
 import org.apache.http.impl.client.DefaultHttpClient;
 import org.apache.http.message.BasicNameValuePair;
 import org.apache.http.protocol.HTTP;
@@ -68,6 +69,7 @@ public class HttpUtils {
 	 * @throws IOException
 	 *             reports I/O sending and/or retrieving data over Http
 	 */
+	@Deprecated
 	public static String postForm(String urlString, Map<?, ?> requestHeaders, Map<?, ?> formParameters)
 			throws Exception {
 		return post(urlString, requestHeaders, formParameters, null);
@@ -90,6 +92,7 @@ public class HttpUtils {
 	 * @throws IOException
 	 *             reports I/O sending and/or retrieving data over Http
 	 */
+	@Deprecated
 	public static String postContents(String urlString, Map<?, ?> requestHeaders, String contents) throws Exception {
 		return post(urlString, requestHeaders, null, contents);
 	}
@@ -113,6 +116,7 @@ public class HttpUtils {
 	 * @throws IOException
 	 *             reports I/O sending and/or retrieving data over Http
 	 */
+	@Deprecated
 	public static String post(String urlString, Map<?, ?> requestHeaders, Map<?, ?> formParameters,
 			String requestContents) throws Exception {
 		// open url connection
@@ -204,46 +208,31 @@ public class HttpUtils {
 	 * @param formParameters
 	 * @return
 	 */
-	public static String sendPost(String url, Map<String, String> requestHeaders, Map<String, String> formParameters) {
-		StringBuilder result = new StringBuilder();
-		try {
-			HttpPost httppost = new HttpPost(url);
-			List<NameValuePair> postParams = new ArrayList<NameValuePair>();
+	public static WebRequestResult sendPost(String url, Map<String, String> requestHeaders,
+			Map<String, String> formParameters) {
+		WebRequestResult requestResult = null;
+		HttpPost httppost = new HttpPost(url);
+		List<NameValuePair> postParams = new ArrayList<NameValuePair>();
 
-			// Map all the headers
-			for (String key : requestHeaders.keySet()) {
-				httppost.setHeader(key, requestHeaders.get(key));
-			}
-
-			// Adding all the params
-			for (String key : formParameters.keySet()) {
-				postParams.add(new BasicNameValuePair(key, formParameters.get(key)));
-			}
-
-			// Add your data
-			httppost.setEntity(new UrlEncodedFormEntity(postParams, HTTP.UTF_8));
-
-			// Execute HTTP Post Request
-			HttpClient httpclient = new DefaultHttpClient();
-			HttpResponse response = httpclient.execute(httppost);
-
-			int res = response.getStatusLine().getStatusCode();
-			Log.d("PNR", "response " + res);
-			Log.d("PNR", response.getStatusLine().getReasonPhrase());
-
-			String line = null;
-
-			// Wrap a BufferedReader around the InputStream
-			BufferedReader rd = new BufferedReader(new InputStreamReader(response.getEntity().getContent()));
-
-			// Read response until the end
-			while ((line = rd.readLine()) != null) {
-				result.append(line);
-			}
-		} catch (ClientProtocolException e) {
-		} catch (IOException e) {
+		// Map all the headers for the request
+		for (String key : requestHeaders.keySet()) {
+			httppost.setHeader(key, requestHeaders.get(key));
 		}
-		return result.toString();
+
+		// Add all the params for the request
+		for (String key : formParameters.keySet()) {
+			postParams.add(new BasicNameValuePair(key, formParameters.get(key)));
+		}
+
+		try {
+			// Add any post data
+			httppost.setEntity(new UrlEncodedFormEntity(postParams, HTTP.UTF_8));
+		} catch (UnsupportedEncodingException e) {
+		}
+
+		// Examine the response code and reasonPhrase
+		requestResult = executeHttpRequest(httppost);
+		return requestResult;
 	}
 
 	/**
@@ -252,29 +241,54 @@ public class HttpUtils {
 	 * @param url
 	 * @return
 	 */
-	public static String sendGet(String url) {
-		StringBuilder result = new StringBuilder();
+	public static WebRequestResult sendGet(String url) {
+		WebRequestResult requestResult = null;
+		HttpGet httpGet = new HttpGet(url);
+
+		// create the result object
+		requestResult = executeHttpRequest(httpGet);
+		return requestResult;
+	}
+
+	/**
+	 * Creates the WebRequestResult object from the response
+	 * 
+	 * @param response
+	 * @return
+	 */
+	private static WebRequestResult executeHttpRequest(HttpUriRequest request) {
+		WebRequestResult requestResult = null;
 		try {
-			HttpGet httpGet = new HttpGet(url);
-
 			HttpClient httpclient = new DefaultHttpClient();
-			HttpResponse response = httpclient.execute(httpGet);
-
-			int res = response.getStatusLine().getStatusCode();
-			Log.d("PNR", "response " + res);
-			Log.d("PNR", response.getStatusLine().getReasonPhrase());
+			HttpResponse response = httpclient.execute(request);
+			int responseCode = response.getStatusLine().getStatusCode();
+			String reasonPhrase = response.getStatusLine().getReasonPhrase();
+			StringBuilder result = new StringBuilder();
 
 			// Wrap a BufferedReader around the InputStream
 			BufferedReader rd = new BufferedReader(new InputStreamReader(response.getEntity().getContent()));
-
 			String line = null;
 			// Read response until the end
 			while ((line = rd.readLine()) != null) {
 				result.append(line);
 			}
-		} catch (ClientProtocolException e) {
+			rd.close();
+
+			// create a request result object
+			requestResult = new WebRequestResult();
+
+			// Let's pack all these data and send to the sender
+			requestResult.setResponseCode(responseCode);
+			requestResult.setResponsePhrase(reasonPhrase);
+			requestResult.setResponse(result.toString());
+		} catch (IllegalStateException e) {
+			e.printStackTrace();
+			Log.e("PNR", e.getMessage());
 		} catch (IOException e) {
+			e.printStackTrace();
+			Log.e("PNR", e.getMessage());
 		}
-		return result.toString();
+		return requestResult;
 	}
+
 }
