@@ -160,6 +160,8 @@ PNRStatusAppV3 3.2.10 [March 2013]
  - [CHANGED]	Exception handling
  - [CHANGED]	UI Tweaks
  
-PNRStatusAppV3 3.2.14 [March 2013]
+PNRStatusAppV3 3.2.18 [March 2013]
  - [ADDED]		Custom header for ticket info dialog, which includes the share icon
  - [CHANGED]	Reset status when check button is clicked
+ - [OPTIMIZED]	Code cleanup
+ - [ADDED]		Apache HttpClient for http operations	
